[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-pipeline"
version = "0.3.1"
description = "Data Science oriented tools, mostly in form of scikit-learn transformers and estimators"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Dmitri Babaev", email = "dmitri.babaev@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "matplotlib>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/dllllb/ds-pipeline"
Repository = "https://github.com/dllllb/ds-pipeline"

[tool.hatch.build.targets.wheel]
packages = ["dstools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
python_files = ["*_test.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 120
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pylint>=2.17.0",
    "notebook>=7.0.0",
    "ruff>=0.2.0",
] 
